Set image frame to fixed size Prevents elements from jumping around so much as images load.

--- a/src/components/bonsaiCard/BonsaiCard.module.css
+++ b/src/components/bonsaiCard/BonsaiCard.module.css
@@ -38,10 +38,8 @@
 .imageFrame {
   display: flex;
   justify-content: center;
-  max-height: 480px;
-  height: fit-content;
-  max-width: 900px;
-  width: 100%;
+  height: 480px;
+  width: 900px;
   border-radius: 10px;
   background-color: var(--subtle-background);
 }
